--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,9 +15,10 @@ span{
 
 .container-carrinho {
     width: 360px;
-    height: 630px;
+    height: 400px;
     color: #FFFFFF;
     margin: auto;
+    background-color: #F8F9FA;
 }
 
 .carrinho {
@@ -80,7 +81,6 @@ span{
 
 .total {
     display: flex;
-    visibility: hidden;
     margin-top: 20px;
 }
 .total h2 {
@@ -126,12 +126,9 @@ span{
     margin: auto;
 }
 @media (min-width:480px) {
-    .total{
-        visibility: unset;
-    }
     .container-carrinho {
         width: 300px;
-        height: 580px;
+        height: 400px;
         color: #FFFFFF;
         margin: auto;
     }
