--- a/src/css/style.css
+++ b/src/css/style.css
@@ -50,8 +50,16 @@ span{
     display: flex;
 }
 
+.photo {
+    width: 60px;
+    height: 60px;
+}
+
+.carrinho-product h2 {
+    width: 150px;
+}
 .carrinho-product-description {
-    line-height: 20px;
+    line-height: 13px;
     margin-left: 7px;
 }
 
