--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,19 +16,20 @@
 }
 
 /* HIDDEN SCROLLBARS*/
-::-webkit-scrollbar {
-    display: none;
-}
-
+/* ::-webkit-scrollbar {
+    display: block;
+} */
+/* 
 * {
     -ms-overflow-style: none;
   }
 * {
     scrollbar-width: none;
-} 
+}  */
 
 body{
     /* overflow-y: hidden; */
+    padding: 15px;
     width: 100vw; 
 }
 button{
@@ -47,14 +48,17 @@ figcaption{
     display: none;
 }
 
+
+
 /* CONTAINER PESQUISA */
 
 .container-pesquisa{  
-    height: 90px;
-    margin-top: 34px;
-    margin-left: 17px;
-    max-width: 300px;
-    margin: auto;
+    /* height: 90px; */
+    max-width: 290px
+}
+
+header{
+    margin-top: 15px;
 }
 
 .header h1{
@@ -64,6 +68,7 @@ figcaption{
 .form-search{
     display: flex; 
     margin-top: 15.48px;
+    max-width: 300px;
 }
 
 .form-search:hover{
@@ -80,8 +85,11 @@ figcaption{
 }
 
 .button-search{
+    background-image: url("../assets/search-icon.png");
+    background-repeat: no-repeat;
+    background-position: center;
     background-color: var(--button-search-color);
-    width: 40px;
+   min-width: 40px;
     height: 40px;
     border-radius: 50%;
     border: none;  
@@ -89,6 +97,30 @@ figcaption{
 
 .button-search:hover{
     background-color: #FF2253;
+    background-image: url("../assets/search-icon-white.png");
+
+}
+
+.form-search{
+    background-color: #F8F9FA;
+    max-width: 100%;
+    height: 49px;
+    display: flex;
+    align-items: center;
+    border-radius: 30px;
+    padding: 3px;
+}
+
+
+
+.nav-filters button{
+  margin-bottom: 10px;
+  font-family: 'Poppins',sans-serif;
+}
+
+.nav-filters button figure{
+    margin-right: 23px;
+
 }
 
 .nav-filters button:hover{
@@ -98,17 +130,21 @@ figcaption{
 /* CONTAINER PRODUCTS */
 
 .container-produtos{
-    max-width: 300px;
+    max-width: 768px;
+    min-width: 300px;
+    margin-top: 30px;
 }
 
 .nav-filters{
     display: flex;
-    overflow-y: scroll;
-    margin-top: 40px;
-    margin-left: 25px;
+    overflow-x: scroll;
+    /* margin-top: 40px;
+    margin-left: 25px; */
     font-size: 14px;
     font-family: 'Inter', sans-serif;   
 }
+
+
 
 .button-filter-all{
     display: flex;
@@ -120,6 +156,7 @@ figcaption{
     background-color: var(--button-filter-all-color);
     box-sizing: border-box;
     border-radius: 30px;
+    border: 1.5px solid transparent;
 }
 
 
@@ -171,10 +208,7 @@ figcaption{
     height: 400px;
     font-family: 'Poppins', sans-serif;
     margin-top: 27px;
-}
 
-.list-products:first-child{
-    margin-left: 18px ;
 }
 
 .products{
@@ -185,8 +219,13 @@ figcaption{
     
 }
 
+.products:first-of-type{
+    margin-left: 0;
+}
+
 .products-img{
-    width: 300px;
+    /* width: 300px; */
+    width: 240px;
 }
 
 .products-title{
@@ -204,6 +243,29 @@ figcaption{
     
 }
 
+.products-category{
+    height: 30px;
+    background-color: #FFE9EE;
+    max-width: 90px;
+    border-radius: 15px;
+    display: flex;
+    align-items: center;
+    color: black;
+    font-weight: normal;
+    font-size: 11px;
+    justify-content: space-evenly;
+    padding-left: 11px;
+    padding-right: 11px;
+    order: revert;
+    flex-direction: row-reverse;
+    transform: translate(10px, -15px);
+}
+
+.products-category img{
+    margin-right: 10px;
+}
+
+
 .div-buy{
     display: flex;
     justify-content: space-between;
@@ -217,18 +279,23 @@ figcaption{
     font-weight: 700;
     font-size: 12px;
 }
+
 .button-add-cart{
     width: 35px;
     height: 35px;
     border-radius: 50%;
     border: none;
     background-color: var(--button-add-to-cart-color);
-   
-   align-self: flex-end;
+    background-image: url("../assets/shopping-cart-green.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    align-self: flex-end;
 }
 
 .button-add-cart:hover{
     background-color: #4ACA94;
+    background-image: url("../assets/shopping-cart-white.png");
+
 }
 
 /* CONTAINER CART */
@@ -237,12 +304,19 @@ figcaption{
     margin: auto;
 } */
 .container-carrinho {
-    width: 360px;
     height: 400px;
     color: #FFFFFF;
     margin: auto;
     background-color:white;
     font-family: 'Poppins', sans-serif;
+    max-width: 280px;
+    margin-left: 0;
+    margin-bottom: 10px;
+    margin-top: 30px;
+}
+
+.ul-carrinho{
+    text-align: center;
 }
 
 .carrinho {
@@ -281,12 +355,27 @@ figcaption{
 }
 
 .carrinho-product h2 {
-    width: 150px;
+    max-width: 130px;
+    font-size: 14px;
+    text-align: initial;
 }
 .carrinho-product-description {
+    color: #000000;
     line-height: 13px;
     margin-left: 7px;
     max-width: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.carrinho-product-description span{
+    font-size: 10px;
+    color: #868E96;
+}
+
+.carrinho-product-description h2{
+    margin-bottom: 10px;
 }
 
 .carrinho-product-description h2 button {
@@ -300,9 +389,13 @@ figcaption{
 }
 .carrinho-product-description p {
     margin-top: 5px;
+    font-weight: normal;
+    font-size: 12px;
 }
 
 .quantidade {
+    padding: 10px;
+    color: #000000;
     background-color: white;
     height: 30px;
     padding-top: 20px;
@@ -315,8 +408,9 @@ figcaption{
 
 
 .total {
+    padding: 10px;
+    color: #000000;
     display: flex;
-    margin-top: 20px;
     justify-content: space-between;
 }
 
@@ -372,20 +466,29 @@ figcaption{
     .total{
         visibility: unset;
     }
-
     .container-carrinho {
        max-width: 320px;
        min-width: 250px;
         height: 467px;
         color: #FFFFFF;
-        margin: auto;
         overflow-x: scroll;
         margin-top: 40px;
-        margin-right: 115px;
-
+        margin-right: 50px;
+        margin-left: 50px;
     }
- 
-  
+
+    .container-carrinho{
+         margin-left: 180px;
+    }
+    .header{
+        display: flex;
+        align-items: center;
+    }
+
+    .container-pesquisa{
+        margin-left: 45px;
+    }
+    
 
 }
 
@@ -394,15 +497,50 @@ figcaption{
         display: flex;
     }
 
+    .header{
+        display: flex;
+        align-items: center;
+    }
+
+    .form-search{
+        max-width: 500px;
+        min-width: 300px;
+    }
+
     .input-search{
         width: 500px;
     }
+
+    .container-logo{
+        margin-right: 200px;
+    }
+
+    .container-carrinho{
+        margin-left: 50px;
+   }
+
+   .carrinho-product h2{
+       font-weight: bold;
+   }
+
 }
 
 @media screen and (min-width: 1024px) {
     /* .main{
         display: flex;
     } */
+    ::-webkit-scrollbar {
+        display: none;
+    }
+
+
+* {
+    -ms-overflow-style: none;
+  }
+* {
+    scrollbar-width: none;
+} 
+    
 
     body{
         background-color: white;
@@ -414,6 +552,7 @@ figcaption{
         justify-content: space-between;
         margin: 0;
         max-width: 100%;
+        margin-right: 180px;
     }
 
     .container-logo{
@@ -427,7 +566,11 @@ figcaption{
        
     }
 
-    .header{
+    .container-carrinho{
+        min-width: 300px;
+    }
+
+      .header{
        display: flex;
        align-items: center;
        justify-content: space-between;
@@ -436,55 +579,29 @@ figcaption{
        background-color: #FFFFFF;
     }
 
-    .form-search{
-        background-color: #F8F9FA;
-        width: 312px;
-        height: 49px;
-        display: flex;
-        align-items: center;
-        border-radius: 30px;
-        padding: 3px;
-    }
+   
 
     .input-search{
        max-width: 270px;
     }
 
-    .nav-filters button figure{
-        margin-right: 23px;
-
-    }
+ 
 
     .list-products{
         flex-flow: row wrap;
         height: 830px;
     }
 
-    .products-category{
-        height: 30px;
-        background-color: #FFE9EE;
-        max-width: 90px;
-        border-radius: 15px;
-        display: flex;
-        align-items: center;
-        color: black;
-        font-weight: normal;
-        font-size: 11px;
-        justify-content: space-evenly;
-        padding-left: 11px;
-        padding-right: 11px;
-        order: revert;
-        flex-direction: row-reverse;
-        transform: translate(10px, -15px);
+    .products:first-of-type{
+        margin-left: 23px;
     }
 
-    .products-category img{
-        margin-right: 10px;
-    }
+  
 
     .products-img{
         border: solid 3px #FFE9EE;
         border-radius: 10px;
+        width: 300px;
     }
 
     .products{
@@ -506,6 +623,14 @@ figcaption{
     span{
     font-size: 10px;
     color: #868E96;
+    }
+
+    .nav-filters{
+        margin-left: 25px;
+    }
+
+    .container-pesquisa{
+        margin-right: 250px;
     }
 
 }
