--- a/src/css/style.css
+++ b/src/css/style.css
@@ -401,6 +401,7 @@ header{
     padding-top: 20px;
     display: flex;
     justify-content: space-between;
+    background-color: #F8F9FA;
 }
 .quantidade p {
     font-weight: bold;
@@ -447,6 +448,7 @@ header{
     align-items: center;
     padding-top: 100px;
     padding-bottom: 100px;
+    background-color:#F8F9FA;
 }
 .carrinho-no-product h2 {
     color: #868E96;
@@ -570,13 +572,15 @@ header{
         min-width: 300px;
     }
 
-      .header{
+    .header{
        display: flex;
        align-items: center;
        justify-content: space-between;
        padding-left: 30px;
        padding-right: 115px;
+       padding-bottom: 10px;
        background-color: #FFFFFF;
+       box-shadow: 0 2em 1em -0.7em #F8F9FA;
     }
 
    
